[project]
name = "first"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rahul Dave", email = "rahuldave@gmail.com" }]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]
first = "python first/console.py"

[tool.pixi.dependencies]
pixi-kernel = ">=0.3.0,<0.4"
jupyterlab = ">=4.2.0,<4.3"
python = ">=3.12.3,<3.13"
ipykernel = ">=6.29.3,<6.30"
click = ">=8.1.7,<8.2"

[tool.pixi.pypi-dependencies]
first = { path = ".", editable = true }
